--- a/Garage_Service/index.html
+++ b/Garage_Service/index.html
@@ -7,47 +7,88 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Garage Service</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="service.html">Services</a></li>
-        <li><a href="login.html">Login/Register</a></li>
-         <img src="c:\Users\Bleron Hajdari\Desktop\272-2729429_logo-auto-repair-garage-logo-hd-png-download.png" alt="Garage Logo" height="90">
-      </ul>
-    </nav>
+  <header class="site-header">
+    <div class="topbar">
+      <div class="container">
+        <div class="logo">Garage Service</div>
+        <div class="contact">
+          <div class="phone">Call us: <a href="tel:+048280106">048 280 106</a></div>
+          <a class="btn book" href="service.html">Book Now</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="container nav-wrap">
+      <nav class="main-nav">
+        <a class="nav-logo" href="index.html">Garage Service</a>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="service.html">Services</a></li>
+          <li><a href="login.html">Login/Register</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main>
     <section class="hero">
-      <h2>Welcome to Garage Service</h2>
-      <p>Your trusted car repair and maintenance partner!</p>
+      <div class="container hero-inner">
+        <div class="hero-copy">
+          <h1>Fast. Reliable. Trusted Auto Repair</h1>
+          <p>Expert maintenance and repair services to keep you moving — oil changes, brakes, tires and more.</p>
+          <div class="hero-cta">
+            <a class="btn primary" href="service.html">Our Services</a>
+            <a class="btn outline" href="contact.html">Contact Us</a>
+          </div>
+        </div>
+        <div class="hero-visual">
+          <!-- Placeholder for hero image -->
+          <div class="hero-image">🚗</div>
+        </div>
+      </div>
     </section>
 
-    <section class="services-preview">
-      <h3>Our Services</h3>
-      <div class="service-card">
-        <h4>Oil Change</h4>
-        <p>Quick and professional oil change services.</p>
-        <a href="service-detail.html">Details</a>
-      </div>
-      <div class="service-card">
-        <h4>Brake Repair</h4>
-        <p>Reliable brake system checks and repairs.</p>
-        <a href="service-detail.html">Details</a>
-      </div>
-      <div class="service-card">
-        <h4>Tire Replacement</h4>
-        <p>New tires installation and balancing.</p>
-        <a href="service-detail.html">Details</a>
+    <section class="services-preview container">
+      <h2>Our Services</h2>
+      <div class="services-grid">
+        <div class="service-card">
+          <div class="icon">🛢️</div>
+          <h3>Oil Change</h3>
+          <p>Quick and professional oil replacement and filter service.</p>
+          <a href="service-detail.html?service=oil" class="btn small">Details</a>
+        </div>
+        <div class="service-card">
+          <div class="icon">🛠️</div>
+          <h3>Brake Repair</h3>
+          <p>Brake inspections, pad replacement, rotor machining and more.</p>
+          <a href="service-detail.html?service=brake" class="btn small">Details</a>
+        </div>
+        <div class="service-card">
+          <div class="icon">🛞</div>
+          <h3>Tire Replacement</h3>
+          <p>Tire fitting, balancing and wheel alignment services.</p>
+          <a href="service-detail.html?service=tire" class="btn small">Details</a>
+        </div>
       </div>
     </section>
+
+    <section class="why-us container">
+      <h2>Why Choose Us</h2>
+      <div class="why-grid">
+        <div>Experienced Technicians</div>
+        <div>Quality Parts</div>
+        <div>Fast Turnaround</div>
+      </div>
+    </section>
+
   </main>
 
-  <footer>
-    <p>&copy; 2025 Garage Service. All rights reserved.</p>
+  <footer class="site-footer">
+    <div class="container">
+      <div class="footer-left">&copy; 2025 Garage Service</div>
+      <div class="footer-right">123 Main St, Anytown • <a href="mailto:info@example.com">info@example.com</a></div>
+    </div>
   </footer>
 </body>
 </html>
