--- a/Garage_Service/login.html
+++ b/Garage_Service/login.html
@@ -1,50 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login / Register</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <header>
-    <h1>Garage Service</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="service.html">Services</a></li>
-        <li><a href="login.html">Login/Register</a></li>
-      </ul>
-    </nav>
+  <header class="site-header">
+    <div class="topbar">
+      <div class="container">
+        <div class="logo">Garage Service</div>
+        <div class="contact">
+          <div class="phone">Call us: <a href="tel:+15551234567">(555) 123-4567</a></div>
+          <a class="btn book" href="service.html">Book Now</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="container nav-wrap">
+      <nav class="main-nav">
+        <a class="nav-logo" href="index.html">Garage Service</a>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="service.html">Services</a></li>
+          <li><a href="login.html">Login/Register</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <main>
+  <main class="container">
     <h2>Login</h2>
-    <form id="loginForm">
+    <form id="loginForm" class="form">
       <label>Email:</label>
       <input type="email" name="email" required>
       <label>Password:</label>
       <input type="password" name="password" required>
-      <button type="submit">Login</button>
+      <button class="btn primary" type="submit">Login</button>
     </form>
 
     <h2>Register</h2>
-    <form id="registerForm">
+    <form id="registerForm" class="form">
       <label>Name:</label>
       <input type="text" name="name" required>
       <label>Email:</label>
       <input type="email" name="email" required>
       <label>Password:</label>
       <input type="password" name="password" required>
-      <button type="submit">Register</button>
+      <button class="btn primary" type="submit">Register</button>
     </form>
   </main>
 
-  <footer>
-    <p>&copy; 2025 Garage Service. All rights reserved.</p>
+  <footer class="site-footer">
+    <div class="container">
+      <div class="footer-left">&copy; 2025 Garage Service</div>
+      <div class="footer-right">123 Main St, Anytown • <a href="mailto:info@example.com">info@example.com</a></div>
+    </div>
   </footer>
 
   <script src="script.js"></script>
 </body>
+
 </html>
