--- a/Garage_Service/service-detail.html
+++ b/Garage_Service/service-detail.html
@@ -7,25 +7,76 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Garage Service</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="service.html">Services</a></li>
-        <li><a href="login.html">Login/Register</a></li>
-      </ul>
-    </nav>
+  <header class="site-header">
+    <div class="topbar">
+      <div class="container">
+        <div class="logo">Garage Service</div>
+        <div class="contact">
+          <div class="phone">Call us: <a href="tel:+15551234567">(555) 123-4567</a></div>
+          <a class="btn book" href="service.html">Book Now</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="container nav-wrap">
+      <nav class="main-nav">
+        <a class="nav-logo" href="index.html">Garage Service</a>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="service.html">Services</a></li>
+          <li><a href="login.html">Login/Register</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <main>
-    <h2>Oil Change</h2>
-    <p>This service includes a full oil replacement, filter change, and a check-up of your engine to ensure optimal performance.</p>
+  <main class="container">
+    <h2 id="service-title">Service Detail</h2>
+    <p id="service-desc">Loading service information...</p>
 
+  <script>
+    // Read ?service=... and update the page content
+    (function() {
+      function getServiceData(name) {
+        const data = {
+          oil: {
+            title: 'Oil Change',
+            desc: 'This service includes a full oil replacement, filter change, and a check-up of your engine to ensure optimal performance.'
+          },
+          brake: {
+            title: 'Brake Repair',
+            desc: 'Comprehensive brake inspection, pad/shoe replacement, rotor resurfacing or replacement, and brake fluid check.'
+          },
+          tire: {
+            title: 'Tire Replacement',
+            desc: 'Tire selection and installation, wheel balancing, and alignment checks to ensure safe driving.'
+          }
+        };
+        return data[name] || null;
+      }
 
-  <footer>
-    <p>&copy; 2025 Garage Service. All rights reserved.</p>
+      const params = new URLSearchParams(window.location.search);
+      const svc = params.get('service');
+      const titleEl = document.getElementById('service-title');
+      const descEl = document.getElementById('service-desc');
+
+      const svcData = getServiceData(svc);
+      if (svcData) {
+        titleEl.textContent = svcData.title;
+        descEl.textContent = svcData.desc;
+      } else {
+        titleEl.textContent = 'Service Not Found';
+        descEl.textContent = 'The requested service was not found. Please go back to the services page to select a valid service.';
+      }
+    })();
+  </script>
+
+  <footer class="site-footer">
+    <div class="container">
+      <div class="footer-left">&copy; 2025 Garage Service</div>
+      <div class="footer-right">123 Main St, Anytown • <a href="mailto:info@example.com">info@example.com</a></div>
+    </div>
   </footer>
 </body>
 </html>
