--- a/Garage_Service/book.html
+++ b/Garage_Service/book.html
@@ -12,8 +12,8 @@
       <div class="container">
         <div class="logo">Garage Service</div>
         <div class="contact">
-          <div class="phone">Call us: <a href="tel:+15551234567">048 280 106</a></div>
-          <a class="btn book" href="service.html">Book Now</a>
+          <!-- Book Now should point to the booking page -->
+          <a class="btn book" href="book.html">Book Now</a>
         </div>
       </div>
     </div>
@@ -69,7 +69,7 @@
   <footer class="site-footer">
     <div class="container">
       <div class="footer-left">&copy; 2025 Garage Service</div>
-      <div class="footer-right">123 Main St, Anytown • <a href="mailto:info@example.com">info@example.com</a></div>
+     <div class="footer-right">Gjilan, lagjja Dardania• <a href="mailto:info@example.com">garageservice@gmail.com</a></div>
     </div>
   </footer>
 
