--- a/Garage_Service/contact.html
+++ b/Garage_Service/contact.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact Us - Garage Service</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="topbar">
       <div class="container">
         <div class="logo">Garage Service</div>
-        <div class="contact">
-          <div class="phone">Call us: <a href="tel:+15551234567">(555) 123-4567</a></div>
+        <div class="contact"></div>
           <a class="btn book" href="book.html">Book Now</a>
         </div>
       </div>
@@ -31,34 +30,61 @@
     </div>
   </header>
 
-  <main class="container">
-    <h1>Contact Us</h1>
-    <p>If you have questions or need assistance, use the form below or reach us at the phone number and email listed.</p>
+  <main>
+    <section class="contact-section">
+      <div class="container contact-wrap">
+        <div class="contact-left">
+          <h2>Contact Us</h2>
+          <p class="lead">Have a question or want to book a service? Reach out and we'll get back to you shortly.</p>
 
-    <div class="contact-info">
-      <p><strong>Phone:</strong> <a href="tel:+15551234567">(555) 123-4567</a></p>
-      <p><strong>Email:</strong> <a href="mailto:info@example.com">info@example.com</a></p>
-      <p><strong>Address:</strong> 123 Main St, Anytown</p>
-    </div>
+          <div class="contact-info">
+            <div class="info-row">
+              <div class="info-title">Address</div>
+              <div class="info-body">Gjilan, lagjja Dardania</div>
+            </div>
+            <div class="info-row">
+              <div class="info-title">Call</div>
+              <div class="info-body"><a href="tel:+048280106">048 280 106</a></div>
+            </div>
+            <div class="info-row">
+              <div class="info-title">Email</div>
+              <div class="info-body"><a href="mailto:info@example.com">info@example.com</a></div>
+            </div>
+            <div class="info-row">
+              <div class="info-title">Hours</div>
+              <div class="info-body">Mon–Fri 8:00 – 18:00</div>
+            </div>
+          </div>
+        </div>
 
-    <form id="contactForm" class="form">
-      <label for="name">Your name</label>
-      <input id="name" name="name" type="text" required>
+        <div class="contact-right">
+          <div class="contact-card">
+            <h3>Send a Message</h3>
+            <form class="form contactForm" id="contactForm">
+              <label for="name">Full name</label>
+              <input id="name" name="name" type="text" placeholder="Your full name" required>
 
-      <label for="email">Your email</label>
-      <input id="email" name="email" type="email" required>
+              <label for="email">Email</label>
+              <input id="email" name="email" type="email" placeholder="you@example.com" required>
 
-      <label for="message">Message</label>
-      <textarea id="message" name="message" rows="5" required></textarea>
+              <label for="phone">Phone</label>
+              <input id="phone" name="phone" type="tel" placeholder="048 280 106">
 
-      <button class="btn primary" type="submit">Send Message</button>
-    </form>
+              <label for="message">Message</label>
+              <textarea id="message" name="message" rows="5" placeholder="Describe your request" required></textarea>
+
+              <button type="submit" class="btn primary">Send Message</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer class="site-footer">
     <div class="container">
       <div class="footer-left">&copy; 2025 Garage Service</div>
-      <div class="footer-right">123 Main St, Anytown • <a href="mailto:info@example.com">info@example.com</a></div>
+      <div class="footer-right">Gjilan, lagjja Dardania• <a href="mailto:info@example.com">garageservice@gmail.com</a></div>
     </div>
   </footer>
 
