--- a/Garage_Service/index.html
+++ b/Garage_Service/index.html
@@ -12,7 +12,6 @@
       <div class="container">
         <div class="logo">Garage Service</div>
         <div class="contact">
-          <div class="phone">Call us: <a href="tel:+048280106">048 280 106</a></div>
           <a class="btn book" href="service.html">Book Now</a>
         </div>
       </div>
@@ -24,7 +23,6 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
-          <li><a href="service.html">Services</a></li>
           <li><a href="login.html">Login/Register</a></li>
         </ul>
       </nav>
@@ -38,7 +36,6 @@
           <h1>Fast. Reliable. Trusted Auto Repair</h1>
           <p>Expert maintenance and repair services to keep you moving — oil changes, brakes, tires and more.</p>
           <div class="hero-cta">
-            <a class="btn primary" href="service.html">Our Services</a>
             <a class="btn outline" href="contact.html">Contact Us</a>
           </div>
         </div>
@@ -56,19 +53,16 @@
           <div class="icon">🛢️</div>
           <h3>Oil Change</h3>
           <p>Quick and professional oil replacement and filter service.</p>
-          <a href="service-detail.html?service=oil" class="btn small">Details</a>
         </div>
         <div class="service-card">
           <div class="icon">🛠️</div>
           <h3>Brake Repair</h3>
           <p>Brake inspections, pad replacement, rotor machining and more.</p>
-          <a href="service-detail.html?service=brake" class="btn small">Details</a>
         </div>
         <div class="service-card">
           <div class="icon">🛞</div>
           <h3>Tire Replacement</h3>
           <p>Tire fitting, balancing and wheel alignment services.</p>
-          <a href="service-detail.html?service=tire" class="btn small">Details</a>
         </div>
       </div>
     </section>
@@ -87,7 +81,7 @@
   <footer class="site-footer">
     <div class="container">
       <div class="footer-left">&copy; 2025 Garage Service</div>
-      <div class="footer-right">123 Main St, Anytown • <a href="mailto:info@example.com">info@example.com</a></div>
+      <div class="footer-right">Gjilan, lagjja Dardania • <a href="mailto:info@example.com">garageservice@gmail.com</a></div>
     </div>
   </footer>
 </body>
