--- a/Garage_Service/login.html
+++ b/Garage_Service/login.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="logo">Garage Service</div>
         <div class="contact">
-          <div class="phone">Call us: <a href="tel:+15551234567">(555) 123-4567</a></div>
+          
           <a class="btn book" href="service.html">Book Now</a>
         </div>
       </div>
@@ -58,7 +58,7 @@
   <footer class="site-footer">
     <div class="container">
       <div class="footer-left">&copy; 2025 Garage Service</div>
-      <div class="footer-right">123 Main St, Anytown • <a href="mailto:info@example.com">info@example.com</a></div>
+     <div class="footer-right">Gjilan, lagjja Dardania• <a href="mailto:info@example.com">garageservice@gmail.com</a></div>
     </div>
   </footer>
 
