--- a/Garage_Service/service.html
+++ b/Garage_Service/service.html
@@ -58,7 +58,7 @@
   <footer class="site-footer">
     <div class="container">
       <div class="footer-left">&copy; 2025 Garage Service</div>
-      <div class="footer-right">123 Main St, Anytown • <a href="mailto:info@example.com">info@example.com</a></div>
+      <div class="footer-right">Gjilan, lagjja Dardania• <a href="mailto:info@example.com">garageservice@gmail.com</a></div>
     </div>
   </footer>
 </body>
