--- a/Garage_Service/book.html
+++ b/Garage_Service/book.html
@@ -12,8 +12,7 @@
       <div class="container">
         <div class="logo">Garage Service</div>
         <div class="contact">
-          <!-- Book Now should point to the booking page -->
-          <a class="btn book" href="book.html">Book Now</a>
+          
         </div>
       </div>
     </div>
@@ -23,9 +22,9 @@
         <a class="nav-logo" href="index.html">Garage Service</a>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="service.html">Services</a></li>
+          <li><a href="service.html">Our Services</a></li>
           <li><a href="login.html">Login/Register</a></li>
+          <li><a class="btn book" href="book.html">Book Now</a></li>
         </ul>
       </nav>
     </div>
