--- a/Garage_Service/contact.html
+++ b/Garage_Service/contact.html
@@ -11,8 +11,8 @@
     <div class="topbar">
       <div class="container">
         <div class="logo">Garage Service</div>
-        <div class="contact"></div>
-          <a class="btn book" href="book.html">Book Now</a>
+        <div class="contact">
+      
         </div>
       </div>
     </div>
@@ -22,9 +22,9 @@
         <a class="nav-logo" href="index.html">Garage Service</a>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="service.html">Services</a></li>
+          <li><a href="service.html">Our Services</a></li>
           <li><a href="login.html">Login/Register</a></li>
+           <li><a class="btn book" href="book.html">Book Now</a></li>
         </ul>
       </nav>
     </div>
