--- a/Garage_Service/index.html
+++ b/Garage_Service/index.html
@@ -12,7 +12,7 @@
       <div class="container">
         <div class="logo">Garage Service</div>
         <div class="contact">
-          <a class="btn book" href="service.html">Book Now</a>
+         
         </div>
       </div>
     </div>
@@ -22,8 +22,10 @@
         <a class="nav-logo" href="index.html">Garage Service</a>
         <ul>
           <li><a href="index.html">Home</a></li>
+          <li><a href="service.html">Our Services</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="login.html">Login/Register</a></li>
+           <li><a class="btn book" href="book.html">Book Now</a></li>
         </ul>
       </nav>
     </div>
@@ -40,7 +42,7 @@
           </div>
         </div>
         <div class="hero-visual">
-          <!-- Placeholder for hero image -->
+         
           <div class="hero-image">🚗</div>
         </div>
       </div>
