--- a/Garage_Service/login.html
+++ b/Garage_Service/login.html
@@ -14,8 +14,7 @@
       <div class="container">
         <div class="logo">Garage Service</div>
         <div class="contact">
-          
-          <a class="btn book" href="service.html">Book Now</a>
+        
         </div>
       </div>
     </div>
@@ -28,6 +27,7 @@
           <li><a href="about.html">About Us</a></li>
           <li><a href="service.html">Services</a></li>
           <li><a href="login.html">Login/Register</a></li>
+           <li><a class="btn book" href="book.html">Book Now</a></li>
         </ul>
       </nav>
     </div>
