--- a/Garage_Service/service-detail.html
+++ b/Garage_Service/service-detail.html
@@ -12,8 +12,7 @@
       <div class="container">
         <div class="logo">Garage Service</div>
         <div class="contact">
-          <div class="phone">Call us: <a href="tel:+15551234567">(555) 123-4567</a></div>
-          <a class="btn book" href="service.html">Book Now</a>
+      
         </div>
       </div>
     </div>
@@ -23,20 +22,23 @@
         <a class="nav-logo" href="index.html">Garage Service</a>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="service.html">Services</a></li>
+          <li><a href="service.html">Our Services</a></li>
           <li><a href="login.html">Login/Register</a></li>
+          <li><a class="btn book" href="book.html">Book Now</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
   <main class="container">
-    <h2 id="service-title">Service Detail</h2>
+    <h2 id="service-title">Oil Change</h2>
     <p id="service-desc">Loading service information...</p>
+  </main>
+
+  
 
   <script>
-    // Read ?service=... and update the page content
+   
     (function() {
       function getServiceData(name) {
         const data = {
@@ -57,7 +59,7 @@
       }
 
       const params = new URLSearchParams(window.location.search);
-      const svc = params.get('service');
+      const svc = (params.get('service') || '').toLowerCase();
       const titleEl = document.getElementById('service-title');
       const descEl = document.getElementById('service-desc');
 
@@ -65,9 +67,11 @@
       if (svcData) {
         titleEl.textContent = svcData.title;
         descEl.textContent = svcData.desc;
+        document.title = svcData.title + ' - Garage Service';
       } else {
         titleEl.textContent = 'Service Not Found';
         descEl.textContent = 'The requested service was not found. Please go back to the services page to select a valid service.';
+        document.title = 'Service Not Found - Garage Service';
       }
     })();
   </script>
@@ -75,7 +79,7 @@
   <footer class="site-footer">
     <div class="container">
       <div class="footer-left">&copy; 2025 Garage Service</div>
-     <div class="footer-right">Gjilan, lagjja Dardania• <a href="mailto:info@example.com">garageservice@gmail.com</a></div>
+      <div class="footer-right">Gjilan, lagjja Dardania• <a href="mailto:info@example.com">garageservice@gmail.com</a></div>
     </div>
   </footer>
 </body>
