--- a/Garage_Service/service.html
+++ b/Garage_Service/service.html
@@ -12,8 +12,7 @@
       <div class="container">
         <div class="logo">Garage Service</div>
         <div class="contact">
-          <div class="phone">Call us: <a href="tel:+15551234567">(555) 123-4567</a></div>
-          <a class="btn book" href="service.html">Book Now</a>
+         
         </div>
       </div>
     </div>
@@ -23,9 +22,9 @@
         <a class="nav-logo" href="index.html">Garage Service</a>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="service.html">Services</a></li>
+          <li><a href="service.html">Our Services</a></li>
           <li><a href="login.html">Login/Register</a></li>
+          <li><a class="btn book" href="book.html">Book Now</a></li>
         </ul>
       </nav>
     </div>
@@ -38,19 +37,19 @@
         <div class="icon">🛢️</div>
         <h3>Oil Change</h3>
         <p>Professional oil change service.</p>
-        <a href="service-detail.html?service=oil" class="btn small">Details</a>
+        <a href="service-detail.html?service=oil" class="btn small">Oil Change</a>
       </div>
       <div class="service-card">
         <div class="icon">🛠️</div>
         <h3>Brake Repair</h3>
         <p>Reliable brake maintenance and repair.</p>
-        <a href="service-detail.html?service=brake" class="btn small">Details</a>
+        <a href="service-detail.html?service=brake" class="btn small">Brake Repair</a>
       </div>
       <div class="service-card">
         <div class="icon">🛞</div>
         <h3>Tire Replacement</h3>
         <p>Tire installation, balancing, and rotation.</p>
-        <a href="service-detail.html?service=tire" class="btn small">Details</a>
+        <a href="service-detail.html?service=tire" class="btn small">Tire Replacement</a>
       </div>
     </div>
   </main>
