--- a/login.html
+++ b/login.html
@@ -1,50 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login / Register</title>
+  <title>Login / Register - Garage Service</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <header>
-    <h1>Garage Service</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="login.html">Login/Register</a></li>
-      </ul>
-    </nav>
+  <header class="site-header">
+    <div class="topbar">
+      <div class="container">
+        <div class="logo">Garage Service</div>
+        <div class="contact">
+        </div>
+      </div>
+    </div>
+
+    <div class="container nav-wrap">
+      <nav class="main-nav">
+        <a class="nav-logo" href="index.html">Garage Service</a>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="service.html">Our Services</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a class="btn book" href="book.html">Book Now</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main>
-    <h2>Login</h2>
-    <form id="loginForm">
-      <label>Email:</label>
-      <input type="email" name="email" required>
-      <label>Password:</label>
-      <input type="password" name="password" required>
-      <button type="submit">Login</button>
-    </form>
+    <section class="auth-section">
+      <div class="container auth-wrapper">
+        <div class="auth-grid">
+          <!-- Login box -->
+          <div class="auth-card">
+            <h2 class="auth-title">Welcome Back</h2>
+            <p class="auth-sub">Sign in to your account</p>
+            <form class="form login-form" id="loginForm" autocomplete="off">
+              <div class="field">
+                <label for="loginEmail">Email</label>
+                <input id="loginEmail" name="email" type="email" placeholder="you@example.com" required>
+              </div>
 
-    <h2>Register</h2>
-    <form id="registerForm">
-      <label>Name:</label>
-      <input type="text" name="name" required>
-      <label>Email:</label>
-      <input type="email" name="email" required>
-      <label>Password:</label>
-      <input type="password" name="password" required>
-      <button type="submit">Register</button>
-    </form>
+              <div class="field">
+                <label for="loginPassword">Password</label>
+                <input id="loginPassword" name="password" type="password" placeholder="••••••••" required>
+              </div>
+
+              <div class="auth-actions">
+                <button type="submit" class="btn primary">Sign In</button>
+                <a class="btn ghost" href="index.html">Back</a>
+              </div>
+
+              <div class="auth-footer">
+                <a href="#forgot">Forgot password?</a>
+              </div>
+            </form>
+          </div>
+
+          <!-- Registration box -->
+          <div class="auth-card">
+            <h2 class="auth-title">Create Account</h2>
+            <p class="auth-sub">Register to book services faster</p>
+            <form class="form register-form" id="registerForm" autocomplete="off">
+              <div class="field">
+                <label for="regName">Full name</label>
+                <input id="regName" name="name" type="text" placeholder="Your full name" required>
+              </div>
+
+              <div class="field">
+                <label for="regEmail">Email</label>
+                <input id="regEmail" name="email" type="email" placeholder="you@example.com" required>
+              </div>
+
+              <div class="field">
+                <label for="regPassword">Password</label>
+                <input id="regPassword" name="password" type="password" placeholder="Create a password" required>
+              </div>
+
+              <div class="auth-actions">
+                <button type="submit" class="btn primary">Register</button>
+                <button type="reset" class="btn ghost">Clear</button>
+              </div>
+
+              <div class="auth-footer">
+                <span>Already have an account? <a href="#login">Sign in</a></span>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
-  <footer>
-    <p>&copy; 2025 Garage Service. All rights reserved.</p>
+  <footer class="site-footer">
+    <div class="container">
+      <div class="footer-left">&copy; 2025 Garage Service</div>
+      <div class="footer-right">Gjilan, lagjja Dardania • <a href="mailto:garageservice@gmail.com">garageservice@gmail.com</a>
+      </div>
+    </div>
   </footer>
 
   <script src="script.js"></script>
 </body>
+
 </html>
