--- a/Garage_Service/service.html
+++ b/Garage_Service/service.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Garage Service - Services</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header class="site-header">
     <div class="topbar">
       <div class="container">
         <div class="logo">Garage Service</div>
         <div class="contact">
-         
+
         </div>
       </div>
     </div>
@@ -22,9 +24,10 @@
         <a class="nav-logo" href="index.html">Garage Service</a>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="service.html">Our Services</a></li>
+          <li><a href="about.html">About Us</a></li>
           <li><a href="login.html">Login/Register</a></li>
           <li><a class="btn book" href="book.html">Book Now</a></li>
+          <li><a class="btn outline" href="contact.html">Contact Us</a></li>
         </ul>
       </nav>
     </div>
@@ -57,8 +60,42 @@
   <footer class="site-footer">
     <div class="container">
       <div class="footer-left">&copy; 2025 Garage Service</div>
-      <div class="footer-right">Gjilan, lagjja Dardania• <a href="mailto:info@example.com">garageservice@gmail.com</a></div>
+      <div class="footer-right">
+        Gjilan, lagjja Dardania • <a href="mailto:garageservice@gmail.com">garageservice@gmail.com</a>
+        <span class="social" style="margin-left:12px; display:inline-flex; gap:10px; align-items:center;">
+          <a href="https://instagram.com/yourprofile" target="_blank" rel="noopener noreferrer" aria-label="Instagram"
+            style="color:inherit; text-decoration:none;">
+
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true">
+              <path
+                d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm0 2a3 3 0 00-3 3v10a3 3 0 003 3h10a3 3 0 003-3V7a3 3 0 00-3-3H7zm5 3.5A4.5 4.5 0 1112 18a4.5 4.5 0 010-9zm0 2a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM18.5 6a.9.9 0 110 1.8.9.9 0 010-1.8z" />
+            </svg>
+          </a>
+
+          <a href="https://facebook.com/yourprofile" target="_blank" rel="noopener noreferrer" aria-label="Facebook"
+            style="color:inherit; text-decoration:none;">
+
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true">
+              <path
+                d="M22 12a10 10 0 10-11.5 9.9v-7H8.9v-3h1.6V9.4c0-1.6 1-2.5 2.4-2.5.7 0 1.4.1 1.4.1v1.6h-.8c-.8 0-1 .5-1 1v1.2h1.8l-.3 3h-1.5v7A10 10 0 0022 12z" />
+            </svg>
+          </a>
+
+          <a href="https://twitter.com/yourprofile" target="_blank" rel="noopener noreferrer" aria-label="Twitter"
+            style="color:inherit; text-decoration:none;">
+
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"
+              aria-hidden="true">
+              <path
+                d="M22 5.9c-.6.3-1.2.5-1.9.6.7-.4 1.2-1.1 1.4-1.9-.7.4-1.4.7-2.2.9C18.9 4.5 17.9 4 16.8 4c-1.7 0-3 1.4-3 3 0 .2 0 .4.1.6-2.5-.1-4.7-1.3-6.2-3.1-.3.5-.5 1.1-.5 1.8 0 1.1.6 2.1 1.6 2.7-.6 0-1.2-.2-1.7-.5v.1c0 1.6 1.1 2.9 2.6 3.2-.3.1-.7.1-1 .1-.3 0-.6 0-.9-.1.6 1.9 2.4 3.3 4.5 3.3-1.6 1.3-3.6 2-5.8 2-.4 0-.8 0-1.2-.1 2 1.3 4.4 2 7 2 8.4 0 13-7 13-13v-.6c.9-.6 1.6-1.3 2.2-2.1-.8.4-1.7.7-2.6.8z" />
+            </svg>
+          </a>
+        </span>
+      </div>
     </div>
   </footer>
 </body>
+
 </html>
