--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Garage Service - Home</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact Us - Garage Service</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -28,57 +28,60 @@
           <li><a href="about.html">About Us</a></li>
           <li><a href="login.html">Login/Register</a></li>
           <li><a class="btn book" href="book.html">Book Now</a></li>
-          <li><a class="btn outline" href="contact.html">Contact Us</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
   <main>
-    <section class="hero">
-      <div class="container hero-inner">
-        <div class="hero-copy">
-          <h1>Fast. Reliable. Trusted Auto Repair</h1>
-          <p>Expert maintenance and repair services to keep you moving — oil changes, brakes, tires and more.</p>
+    <section class="contact-section">
+      <div class="container contact-wrap">
+        <div class="contact-left">
+          <h2>Contact Us</h2>
+          <p class="lead">Have a question or want to book a service? Reach out and we'll get back to you shortly.</p>
 
+          <div class="contact-info">
+            <div class="info-row">
+              <div class="info-title">Address</div>
+              <div class="info-body">Gjilan, lagjja Dardania</div>
+            </div>
+            <div class="info-row">
+              <div class="info-title">Call</div>
+              <div class="info-body"><a href="tel:+048280106">048 280 106</a></div>
+            </div>
+            <div class="info-row">
+              <div class="info-title">Email</div>
+              <div class="info-body"><a href="mailto:info@example.com">garageservice@gmail.com</a></div>
+            </div>
+            <div class="info-row">
+              <div class="info-title">Hours</div>
+              <div class="info-body">Mon–Fri 8:00 – 18:00</div>
+            </div>
+          </div>
         </div>
-        <div class="hero-visual">
 
-          <div class="hero-image">🚗</div>
+        <div class="contact-right">
+          <div class="contact-card">
+            <h3>Send a Message</h3>
+            <form class="form contactForm" id="contactForm">
+              <label for="name">Full name</label>
+              <input id="name" name="name" type="text" placeholder="Your full name" required>
+
+              <label for="email">Email</label>
+              <input id="email" name="email" type="email" placeholder="you@example.com" required>
+
+              <label for="phone">Phone</label>
+              <input id="phone" name="phone" type="tel" placeholder="048 280 106">
+
+              <label for="message">Message</label>
+              <textarea id="message" name="message" rows="5" placeholder="Describe your request" required></textarea>
+
+              <button type="submit" class="btn primary">Send Message</button>
+            </form>
+          </div>
         </div>
       </div>
     </section>
-
-    <section class="services-preview container">
-      <h2>Our Services</h2>
-      <div class="services-grid">
-        <div class="service-card">
-          <div class="icon">🛢️</div>
-          <h3>Oil Change</h3>
-          <p>Quick and professional oil replacement and filter service.</p>
-        </div>
-        <div class="service-card">
-          <div class="icon">🛠️</div>
-          <h3>Brake Repair</h3>
-          <p>Brake inspections, pad replacement, rotor machining and more.</p>
-        </div>
-        <div class="service-card">
-          <div class="icon">🛞</div>
-          <h3>Tire Replacement</h3>
-          <p>Tire fitting, balancing and wheel alignment services.</p>
-        </div>
-      </div>
-    </section>
-
-    <section class="why-us container">
-      <h2>Why Choose Us</h2>
-      <div class="why-grid">
-        <div>Experienced Technicians</div>
-        <div>Quality Parts</div>
-        <div>Fast Turnaround</div>
-      </div>
-    </section>
-
   </main>
 
   <footer class="site-footer">
@@ -120,6 +123,8 @@
       </div>
     </div>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 
 </html>
